<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QYr-F7-thi">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="CatbirdX" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="dAb-Y9-jkT">
                                <rect key="frame" x="50" y="188" width="314" height="132"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RZh-yY-aUh">
                                        <rect key="frame" x="0.0" y="0.0" width="314" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="login"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gxx-a4-7TS">
                                        <rect key="frame" x="0.0" y="51" width="314" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="password"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gIO-t8-8GT">
                                        <rect key="frame" x="0.0" y="102" width="314" height="30"/>
                                        <state key="normal" title="Done"/>
                                        <connections>
                                            <action selector="done" destination="BYZ-38-t0r" eventType="touchUpInside" id="23U-2m-GjU"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="Gxx-a4-7TS" firstAttribute="leading" secondItem="dAb-Y9-jkT" secondAttribute="leading" id="HJK-CE-Pxg"/>
                                    <constraint firstItem="RZh-yY-aUh" firstAttribute="leading" secondItem="dAb-Y9-jkT" secondAttribute="leading" id="MzZ-hK-epA"/>
                                    <constraint firstAttribute="trailing" secondItem="Gxx-a4-7TS" secondAttribute="trailing" id="Q4f-dL-J2L"/>
                                    <constraint firstAttribute="trailing" secondItem="RZh-yY-aUh" secondAttribute="trailing" id="Quf-Mu-UlI"/>
                                    <constraint firstItem="gIO-t8-8GT" firstAttribute="leading" secondItem="dAb-Y9-jkT" secondAttribute="leading" id="ZOC-bD-ws1"/>
                                    <constraint firstAttribute="trailing" secondItem="gIO-t8-8GT" secondAttribute="trailing" id="cpA-gf-mwd"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dAb-Y9-jkT" secondAttribute="trailing" constant="50" id="8gR-Lc-Ccz"/>
                            <constraint firstItem="dAb-Y9-jkT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="luF-ek-kOV"/>
                            <constraint firstItem="dAb-Y9-jkT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="n9o-IZ-2Ap"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="YQ7-Rx-xuP"/>
                    <connections>
                        <outlet property="loginTextField" destination="RZh-yY-aUh" id="vhP-UE-fnT"/>
                        <outlet property="passwordTextField" destination="Gxx-a4-7TS" id="yh4-Dj-XU4"/>
                        <segue destination="qUZ-iY-diU" kind="show" identifier="ShowMain" id="Nbi-tP-fVZ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="400.00000000000006" y="141.96428571428569"/>
        </scene>
        <!--Main View Controller-->
        <scene sceneID="kZk-rL-gSw">
            <objects>
                <viewController id="qUZ-iY-diU" customClass="MainViewController" customModule="CatbirdX" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="EXW-Hr-xXQ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Main Screen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aFw-SJ-HZh">
                                <rect key="frame" x="160" y="211" width="95" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="Fxs-ow-bZX"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="vHV-77-EZ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1175" y="142"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="oQy-XP-ocX">
            <objects>
                <navigationController id="QYr-F7-thi" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ijM-Vv-hhK">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Tif-25-NF7"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zEq-by-mkw" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-343" y="142"/>
        </scene>
    </scenes>
</document>
